--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,10 +84,68 @@
   --sidebar-ring: oklch(0.645 0.246 16.439);
 }
 
-.dark {
+:root {
+  --background: #fff;
+  --foreground: #171717;
+  --black-russian: #13121a;
+  --mirage: #191925;
+  --haiti: #1e1932;
+  --dark-gunmetal: #232336;
+  --space-cadet: #2c2c4a;
+  --american-blue: #3a3978;
+  --dark-slate-blue: #424286;
+  --light-purple: #b374f2;
+  --soft-blue: #7878fa;
+  --perano: #aaabe8;
+  --lavender: #ebebfd;
+  --light-gray: #f3f5f9;
+  --rising-dark: #00b1a7;
+  --bg-rising: rgba(1, 241, 227, 0.5);
+  --rising: #01f1e3;
+  --rising-light: #afe5e5;
+  --falling: #fe2264;
+  --bg-falling: rgba(254, 34, 100, 0.5);
+}
+
+/* .dark {
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.21 0.006 285.885);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.645 0.246 16.439);
+  --primary-foreground: oklch(0.969 0.015 12.422);
+  --secondary: oklch(0.274 0.006 286.033);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.274 0.006 286.033);
+  --muted-foreground: oklch(0.705 0.015 286.067);
+  --accent: oklch(0.274 0.006 286.033);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.645 0.246 16.439);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.21 0.006 285.885);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(0.645 0.246 16.439);
+  --sidebar-primary-foreground: oklch(0.969 0.015 12.422);
+  --sidebar-accent: oklch(0.274 0.006 286.033);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.645 0.246 16.439);
+} */
+
+.dark {
+  --background: #15141f;
+  --foreground: oklch(0.985 0 0);
+  /* --card: oklch(0.21 0.006 285.885); */
+  --card: #1f1934;
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
   --popover-foreground: oklch(0.985 0 0);
