--- a/src/app/ui/HomePage/CoinTable/tableRow.css
+++ b/src/app/ui/HomePage/CoinTable/tableRow.css
@@ -22,3 +22,10 @@
 .tableRowProgressColors7 {
   background-color: #8c532d;
 }
+
+.tableRowProgressColorsLightMode0 {
+  background-color: #ffb7d2;
+}
+.tableRowProgressColorsLightMode1 {
+  background-color: #9fe7e6;
+}
