more css and more and more, added max -w to lots of things. should look good on large screens

--- a/src/app/ui/HomePage/CoinTable/tableRow.css
+++ b/src/app/ui/HomePage/CoinTable/tableRow.css
@@ -24,7 +24,7 @@
 }
 
 .tableRowProgressColorsLightMode0 {
-  background-color: #ffb7d2;
+  background-color: #b6bbf5;
 }
 .tableRowProgressColorsLightMode1 {
   background-color: #9fe7e6;
