--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@
 :root {
   --radius: 1rem;
   /* --background: oklch(100% 0.00011 271.152); */
-  --background: '#f3f5f9',
+  --background: '#f3f5f9';
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.141 0.005 285.823);
