--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 /*
   ---break---
 */
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -17,6 +18,10 @@
   background: linear-gradient(90deg, #e5e7eb 25%, #f3f4f6 50%, #e5e7eb 75%);
   background-size: 200% 100%;
   animation: shimmer 1.5s infinite;
+}
+
+.dark .shimmer {
+  background: linear-gradient(90deg, #374151 25%, #4b5563 50%, #374151 75%);
 }
 
 @keyframes shimmer {
@@ -45,7 +50,7 @@
 :root {
   --radius: 1rem;
   /* --background: oklch(100% 0.00011 271.152); */
-  --background: '#f3f5f9';
+  --background: rgba(242, 245, 249, 255);
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.141 0.005 285.823);
@@ -56,7 +61,7 @@
   --secondary: oklch(0.967 0.001 286.375);
   --secondary-foreground: oklch(0.21 0.006 285.885);
   --muted: oklch(0.967 0.001 286.375);
-  --muted-foreground: oklch(0.552 0.016 285.938);
+  --muted-foreground: #e2e5fb;
   --accent: oklch(0.967 0.001 286.375);
   --accent-foreground: oklch(0.21 0.006 285.885);
   --destructive: oklch(0.577 0.245 27.325);
@@ -79,67 +84,9 @@
   --selected: linear-gradient(180deg, #4338ca, #3730a3);
 }
 
-/* :root {
-  --background: #fff;
-  --foreground: #171717;
-  --black-russian: #13121a;
-  --mirage: #191925;
-  --haiti: #1e1932;
-  --dark-gunmetal: #232336;
-  --space-cadet: #2c2c4a;
-  --american-blue: #3a3978;
-  --dark-slate-blue: #424286;
-  --light-purple: #b374f2;
-  --soft-blue: #7878fa;
-  --perano: #aaabe8;
-  --lavender: #ebebfd;
-  --light-gray: #f3f5f9;
-  --rising-dark: #00b1a7;
-  --bg-rising: rgba(1, 241, 227, 0.5);
-  --rising: #01f1e3;
-  --rising-light: #afe5e5;
-  --falling: #fe2264;
-  --bg-falling: rgba(254, 34, 100, 0.5);
-} */
-
-/* .dark {
-  --background: oklch(0.141 0.005 285.823);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.21 0.006 285.885);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.21 0.006 285.885);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.645 0.246 16.439);
-  --primary-foreground: oklch(0.969 0.015 12.422);
-  --secondary: oklch(0.274 0.006 286.033);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.274 0.006 286.033);
-  --muted-foreground: oklch(0.705 0.015 286.067);
-  --accent: oklch(0.274 0.006 286.033);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.645 0.246 16.439);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.21 0.006 285.885);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.645 0.246 16.439);
-  --sidebar-primary-foreground: oklch(0.969 0.015 12.422);
-  --sidebar-accent: oklch(0.274 0.006 286.033);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.645 0.246 16.439);
-} */
-
 .dark {
   --background: #13121b;
   --foreground: oklch(0.985 0 0);
-  /* --card: oklch(0.21 0.006 285.885); */
   --card: #1f1934;
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
@@ -149,7 +96,7 @@
   --secondary: oklch(0.274 0.006 286.033);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.274 0.006 286.033);
-  --muted-foreground: oklch(0.705 0.015 286.067);
+  --muted-foreground: rgba(35, 35, 56, 255);
   --accent: oklch(0.274 0.006 286.033);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
